# python-security-system

./: .env.example  .gitignore  .sample.env  app.py  pyproject.toml  requirements.txt  temp.py  temp.txt  test.py
authentication/: auth.py  bearer.py  tokens.py
client/: __init__.py  request.py
database/: crud.py  schema.py
exceptions/: custom_exception.py
models/: detect.py  model.py
repository/: logs.py  recordings.py  security.py  staff.py  student.py  students.py  university_member.py  users.py
response/: response.py
routers/: auth.py  learn.py  security.py  student.py  user.py
serializers/: security_personnel.py  staff.py  student.py  university_member.py
tests/: test_camera.py
utils/: camera.py  file.py  func.py  image.py  interface.py  mail.py  model.py  notifications.py  storage.py  tasks.py  upload.py  validate.py  video.py  video_func.py
utils/models/: 03-09-23-19-01-26.avi  2023-09-09__21-08-04.avi
validation/: model.py
videos/: 2023-09-12__00-03-15.avi  2023-09-12__00-33-06.avi  2023-09-12__00-37-33.avi  2023-09-13__09-45-41.avi  2023-09-13__10-06-27.avi  2023-09-26__17-50-01.avi  2023-09-26__17-53-17.avi  2023-09-26__17-54-11.avi  2023-09-26__18-13-39.avi  2023-09-26__18-23-02.avi  2023-09-26__18-49-40.avi  2023-09-27__15-46-36.avi  2023-09-27__15-50-36.avi  2023-09-27__15-57-30.avi  2023-09-27__15-58-39.avi  2023-09-27__16-06-48.avi  2023-09-27__16-32-16.avi  2023-09-27__16-49-33.avi  2023-09-27__17-02-09.avi  2023-09-27__17-16-10.avi  2023-09-27__17-17-40.avi  2023-09-27__17-26-33.avi  2023-09-27__17-30-48.avi  2023-09-27__17-35-40.avi  2023-09-27__17-40-49.avi  2023-09-27__17-44-56.avi  2023-09-27__17-46-56.avi  2023-09-27__17-48-41.avi  2023-09-27__18-24-43.avi
