[tool.poetry]
name = "human detection security system"
version = "0.1.0"
description = "A security system created with python and opencv imbued with machine learning"
authors = ["Dakoh Wisdom <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.0"
mongoengine = "^0.27.0"
imutils = "^0.5.4"
uvicorn = "^0.23.2"
dataclasses-json = "^0.6.1"
certifi = "^2023.11.17"
bcrypt = "^4.1.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
opencv-python = "^4.8.0.76"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
