[tool.poetry]
name = "campus-python-security-system"
version = "0.1.0"
description = "A security system created with python and opencv imbued with machine learning"
authors = ["Wisdom Dakoh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mongoengine = "^0.27.0"
dataclasses-json = "^0.6.3"
uvicorn = "^0.25.0"
certifi = "^2023.11.17"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0.post1"
fastapi-mail = "^1.4.1"
pyjwt = "^2.8.0"
fastapi = "^0.105.0"
opencv-python-headless = "4.5.4.60"
face-recognition = "^1.3.0"
python-multipart = "^0.0.6"
tensorflow = "2.9.1"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
