[tool.poetry]
name = "campus-python-security-system"
version = "0.1.0"
description = "A security system created with python and opencv imbued with machine learning"
authors = ["Wisdom Dakoh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mongoengine = "^0.27.0"
dataclasses-json = "^0.6.3"
uvicorn = "^0.25.0"
certifi = "^2023.11.17"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.0"
email-validator = "^2.1.0.post1"
fastapi-mail = "^1.4.1"
pyjwt = "^2.8.0"
fastapi = "^0.105.0"
python-multipart = "^0.0.6"
scikit-learn = "^1.3.2"
cloudinary = "^1.37.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
opencv-python = "4.7.0.72"
requests = "^2.31.0"
face_recognition = { git = "https://github.com/dakohhh/face_recognition.git", branch = "master" }
beanie = "^1.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
